Version 0.5.1 -- Subversion
-----------------

* Added assume_mod_rewrite to config if using the .htaccess and mod_rewrite
functionality
* Added automatic aliases option
* Fixed upgrade path from 0.1 through to 0.5
* Fixed a bug with PATH_INFO
* Fixed a bug with Call-time pass-by-reference Warning
* Re-added phplayers-menu.css : users should however move its content to their
template.

Version 0.5 -- Sun Aug 22 2004
-----------------

* Added page aliases
* Added htaccess file to make pretty page aliases 
* Added new admin stylesheet (Bewbs)
* Added new admin icons (Graeme)
* Added file manager
* Added LinkBlog module
* Added RSS module
* Added PostgreSQL 7 support
* Added phpdoc strings to many files and functions
* Added module and tag self-documentation hooks
* Added ability for module's adminexecute function to use the wysiwyg
* Added more options to dhtmlmenu and bulletmenu
* Changed modules page to be called plugins.  Added tags to same page.
* Changed config file to a new format.  Upgrade script will take care
up upgrading it automatically.
* Changed inner workings so that code is easier to 
understand.  We now pass one global object around and put important 
variables and objects inside it.  Makes the code very consistent.
* Changed inner working of the content hierarchy to allow for more
custom menus.
* Fixed modules to respect the installed and active flags
* Lots of little bug fixes and changes
* Removed lots of NOTICE level errors
* Updated adodb to 4.5.2

Version 0.4.1 -- Fri Aug 13 2004
-----------------

* Added template copying functionality (Fixes #39)
* Added checks to make sure Template titles can't be reused
* Added function to set template to every page (Fixes #42)
* Added config flag for turning on smarty's {php} tags (Fixes #47)
* Added config flag for setting preview tmp file location (Fixes #36)
* Fixed redirection bugs in the news module
* Fixed a bug in adding a group