@@ -101,7 +101,7 @@ if ($add) {
 ?>
 
 <div class=button><a href="addtemplate.php"><?=$gettext->gettext("Add New Template")?></a></div>
-<div class="helparea">
+<div id="helparea" class="helparea">
 <?php
 echo "<p>".$gettext->gettext("This page allows you to edit, delete, and create templates.")."</p>";
 echo "<p>".$gettext->gettext("To create a new template, click on the ")."<u>".$gettext->gettext("Add New Template")."</u>".$gettext->gettext(" button.")."<br />";
